--- a/index.html
+++ b/index.html
@@ -1,144 +1,209 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kwiaty</title>
     <!-- maps -->
     <script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.4.3/build/ol.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.4.3/css/ol.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.4.3/css/ol.css"
+    />
 
-    <link href="https://fonts.googleapis.com/css2?family=Syne+Mono&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,400;0,600;0,800;1,900&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Syne+Mono&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,400;0,600;0,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
 
-    <link rel="stylesheet" href="/css/root.css">
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/slider.css">
-</head>
+    <link rel="stylesheet" href="/css/root.css" />
+    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/css/slider.css" />
+    <link rel="stylesheet" href="/SASS/index.css" />
+  </head>
 
-<body>
+  <body>
     <nav class="nav">
-            <div class="hamburger_menu">
-                <div class="line line_1"></div>
-                <div class="line line_2"></div>
-                <div class="line line_3"></div>
-            </div>
-        <div class="nav_list">
-            <a class="nav__link" href="#aboutMe">o mnie</a>
-            <a class="nav__link" href="#myClients">moi klienci</a>
-            <a class="nav__link" href="/oferta.html">oferta</a>
-            <a class="nav__link" href="#offerContainer">opinie</a>
-            <a class="nav__link" href="#contactContainer">kontakt</a>
-            <a class="nav__link" href="#mapOSM">jak dojechać</a>
-        </div>
+      <div class="nav__hamburger">
+        <div class="nav__hamburger--line line_1"></div>
+        <div class="nav__hamburger--line line_2"></div>
+        <div class="nav__hamburger--line line_3"></div>
+      </div>
+      <div class="nav__list">
+        <a class="nav__list--link" href="#aboutMe">o mnie</a>
+        <a class="nav__list--link" href="#myClients">moi klienci</a>
+        <a class="nav__list--link" href="/oferta.html">oferta</a>
+        <a class="nav__list--link" href="#offerContainer">opinie</a>
+        <a class="nav__list--link nav__list--contact" href="#contactContainer"
+          >kontakt</a
+        >
+        <a class="nav__list--link" href="#mapOSM">jak dojechać</a>
+      </div>
     </nav>
 
-    <header>
-        <div class="none"></div>
-        <h1>Najpiękniejsze kwiaty w okolicy</h1>
+    <header class="header">
+      <div class="header__none"></div>
+      <h1 class="header__catchword">Najpiękniejsze kwiaty w okolicy</h1>
     </header>
     <main>
-        <section class="aboutMe" id="aboutMe">
-            <div class="aboutMeTextContainer">
-                <h2 class="aboutMeHeader">Na rynku od 1970 roku</h2>
-                <span class="aboutMeText">Jesteśmy zawsze skupieni na jednej rzeczy: zadowolenie klienta...
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Pariatur asperiores saepe ex in nisi possimus minima aliquam atque magni molestias facere maxime natus, perspiciatis tempore ea tenetur accusamus quisquam exercitationem?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis voluptatibus, alias, distinctio harum, ipsa nam officiis qui velit facilis excepturi facere. Pariatur earum vero sed unde nihil ratione accusantium eaque?
-                </span>
+      <section class="aboutMe" id="aboutMe">
+        <div class="aboutMe__container">
+          <h2 class="aboutMe__container--header">Na rynku od 1970 roku</h2>
+          <span class="aboutMe__container--text"
+            >Jesteśmy zawsze skupieni na jednej rzeczy: zadowolenie klienta...
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Pariatur
+            asperiores saepe ex in nisi possimus minima aliquam atque magni
+            molestias facere maxime natus, perspiciatis tempore ea tenetur
+            accusamus quisquam exercitationem?Lorem ipsum dolor, sit amet
+            consectetur adipisicing elit. Debitis voluptatibus, alias,
+            distinctio harum, ipsa nam officiis qui velit facilis excepturi
+            facere. Pariatur earum vero sed unde nihil ratione accusantium
+            eaque?
+          </span>
+        </div>
+        <img class="aboutMe__photo" src="/img/aboutMePhoto.jpg" alt="tom" />
+      </section>
+      <section class="myClients" id="myClients">
+        <div class="myClients__left">
+          <div class="myClients__left--up">
+            <p class="myClients__left--up--header">Moi klienci</p>
+          </div>
+          <div class="myClients__left--down">
+            Możesz nas spotkać na rynkach w całym powiecie ;P
+          </div>
+        </div>
+        <div class="myClients__right">
+          <h2 class="myClients__right--header">
+            Współpracujemy z małymi i dużymi
+          </h2>
+          <p class="myClients__right--text">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos
+            quisquam, numquam in perferendis consequuntur provident facere sit
+            iusto, amet eius omnis ducimus praesentium, vero totam corrupti
+            animi reiciendis error dolorem? Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Necessitatibus debitis harum
+            doloremque porro blanditiis officiis qui, impedit cum ullam hic
+            ipsum culpa eius soluta sequi aliquam magnam quia, in dicta!
+          </p>
+        </div>
+      </section>
+      <section class="offer" id="offerContainer">
+        <div class="offer__photo"></div>
+        <div class="offer__container">
+          <h1 class="offer__container--header">Asortyment</h1>
+          <span class="offer__container--text"
+            >Zapraszam do zapoznania się z moją ofertą. Kliknij w przycisk
+            poniżej aby zobaczyć asortyment
+          </span>
+          <button
+            onclick="location.href='/oferta.html'"
+            type="button"
+            class="offer__button"
+          >
+            Moja Oferta
+          </button>
+        </div>
+      </section>
+      <section class="opinionContainer">
+        <div class="slidesContainer">
+          <div class="slides">
+            <h1>Super kwiatki, kolorowo i pachnąco</h1>
+            <p class="opinionAuthor">- Kłapouchy Kowalski</p>
+          </div>
+          <div class="slides">
+            <h1>
+              Bardzo smaczne i w ogóle. <br />Lorem ipsum, dolor sit amet
+              consectetur adipisicing elit.
+            </h1>
+            <p class="opinionAuthor">- Ernest Bimbrownik</p>
+          </div>
+          <div class="slides">
+            <h1>Można wypchać tym lisa - polecam</h1>
+            <p class="opinionAuthor">- Kubus Uszatek z żoną</p>
+          </div>
+        </div>
+      </section>
+      <section class="contactContainer" id="contactContainer">
+        <div class="leftContactContainer">
+          <form
+            action="https://formspree.io/f/mwkwddel"
+            method="POST"
+            method="post"
+          >
+            <p class="leftContactContainerHeader">
+              Napisz, jeśli masz jakies pytania
+            </p>
+            <div class="nameEmail">
+              <label for="name">
+                <input
+                  class="nameEmailItem name"
+                  type="text"
+                  placeholder="Name"
+                  id="name"
+                  name="name"
+                  required
+                />
+                <div class="statusName hidden">wpisz poprawne imię</div>
+              </label>
+              <label for="email">
+                <input
+                  class="nameEmailItem email"
+                  type="email"
+                  placeholder="Email"
+                  id="email"
+                  name="email"
+                  required
+                />
+                <div class="statusEmail hidden">wpisz poprawny email</div>
+              </label>
             </div>
-            <img class="aboutMePhoto" src="/img/aboutMePhoto.jpg" alt="tom">
-        </section>
-        <section class="myClients" id="myClients">
-            <div class="myClientsLeft">
-                <div class="myClientsLeftUp">
-                    <p class="myClientsLeftUpHeader">Moi klienci</p>
-                </div>
-                <div class="myClientsLeftDown">Możesz nas spotkać na rynkach w całym powiecie ;P </div>
+            <div class="messageSubmitBtn">
+              <label for="message">
+                <textarea
+                  class="messageSubmit"
+                  placeholder="Message..."
+                  name="message"
+                  required
+                ></textarea>
+              </label>
+              <button class="submitBtn" type="submit" value="Submit">
+                Wyślij
+              </button>
             </div>
-            <div class= "myClientsRight">
-                <h2 class="myClientsRightHeader">Współpracujemy z małymi i dużymi</h2>
-                <p class="myClientsRightText">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos quisquam, numquam in perferendis consequuntur provident facere sit iusto, amet eius omnis ducimus praesentium, vero totam corrupti animi reiciendis error dolorem?
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus debitis harum doloremque porro blanditiis officiis qui, impedit cum ullam hic ipsum culpa eius soluta sequi aliquam magnam quia, in dicta!
-                </p>
-            </div>
-        </section>
-        <section class="offerContainer" id="offerContainer">
-            <div class="offerPhoto"></div>
-            <div class="offerTextContainer">
-                <h1 class="offerHeader">Asortyment</h1>
-                <span class="offerText">Zapraszam do zapoznania się z moją ofertą.
-                    Kliknij w przycisk poniżej aby zobaczyć asortyment </span>
-                    <button onclick="location.href='/oferta.html'" type=button class="offerBtn">Moja Oferta</button>
-                </div>
-            </section>
-            <section class="opinionContainer">
-                <div class="slidesContainer">
-                    <div class="slides">
-                        <h1>Super kwiatki, kolorowo i pachnąco</h1>
-                        <p class="opinionAuthor">- Kłapouchy Kowalski</p>
-                    </div>
-                    <div class="slides">
-                        <h1>Bardzo smaczne i w ogóle.
-                            <br>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h1>
-                            <p class="opinionAuthor">- Ernest Bimbrownik</p>
-                    </div>
-                        <div class="slides">
-                            <h1>Można wypchać tym lisa - polecam</h1>
-                            <p class="opinionAuthor">- Kubus Uszatek z żoną</p>
-                        </div>
-                    </div>
-            </section>
-            <section class="contactContainer" id="contactContainer">
-                <div class="leftContactContainer">
-                    <form action="https://formspree.io/f/mwkwddel" method="POST" method="post">
-                        <p class="leftContactContainerHeader">Napisz, jeśli masz jakies pytania</p>
-                        <div class="nameEmail">
-                            <label for="name" >
-                                <input class="nameEmailItem name" type="text" placeholder="Name" id="name" name="name" required>
-                                <div class="statusName hidden">wpisz poprawne imię</div>
-                            </label>
-                            <label for="email">
-                                <input class="nameEmailItem email" type="email" placeholder="Email" id="email" name="email" required>
-                                <div class="statusEmail hidden">wpisz poprawny email</div>
-                            </label>
-                        </div>
-                        <div class="messageSubmitBtn">
-                            <label for="message">
-                                <textarea class="messageSubmit" placeholder="Message..." name="message" required></textarea>
-                            </label>
-                            <button class="submitBtn" type="submit" value="Submit">Wyślij</button>
-                        </div>
-                    </form>
-                </div>
-                <div class="rightContactContainer"></div>
-            </section>
-        <section>
-            <div class="map" id="mapOSM">
-                <div id="popup" class="ol-popup popup">
-                    <a href="#" id="popup-closer" class="ol-popup-closer"></a>
-                    <div id="popup-content"></div>
-                </div>
-                <!-- <div class="popup" id="popup">Hello World</div> -->
-            </div>
-        </section>
+          </form>
+        </div>
+        <div class="rightContactContainer"></div>
+      </section>
+      <section>
+        <div class="map" id="mapOSM">
+          <div id="popup" class="ol-popup popup">
+            <a href="#" id="popup-closer" class="ol-popup-closer"></a>
+            <div id="popup-content"></div>
+          </div>
+          <!-- <div class="popup" id="popup">Hello World</div> -->
+        </div>
+      </section>
     </main>
-        <footer>
-            <div class="footerInfos">
-                <div class="footerPhone">Zadzwoń: 123 456 789</div>
-                <div class="footerAdress">Iłowo-Osada 13-240, ul. Śmaka i Owaka 3/4</div>
-            </div>
-            <div class="footerCopy">&copy; Ogrodnictwo Tom C.</div>
-        </footer>
+    <footer>
+      <div class="footerInfos">
+        <div class="footerPhone">Zadzwoń: 123 456 789</div>
+        <div class="footerAdress">
+          Iłowo-Osada 13-240, ul. Śmaka i Owaka 3/4
+        </div>
+      </div>
+      <div class="footerCopy">&copy; Ogrodnictwo Tom C.</div>
+    </footer>
 
-        <script src="/JavaScript/main.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js"></script>
-        <script src="/JavaScript/contactForm.js"></script>
-        <script src="/JavaScript/hamburger.js"></script>
-        <script src="/JavaScript/slider.js"></script>
-
-</body>
-
-
+    <script src="/JavaScript/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js"></script>
+    <script src="/JavaScript/contactForm.js"></script>
+    <script src="/JavaScript/hamburger.js"></script>
+    <script src="/JavaScript/slider.js"></script>
+  </body>
 </html>
