--- a/index.html
+++ b/index.html
@@ -124,19 +124,11 @@
               <p class="slide_author">- Kłapouchy Kowalski</p>
             </div>
             <div class="slide">
-              <h1 class="slide__text">
-                Bardzo smaczne i w ogóle. <br />Lorem ipsum, dolor sit amet
-                consectetur adipisicing elit jwbcjibwe ncokw necoiwje f nwdconwd
-                mdcpkw dpjc pwjdp jwejw' p'oiwj c'pjwdp w wjd jw pcwpdj pw wdjp'
-                wdpj pwj p.
-              </h1>
+              <h1 class="slide__text">Bardzo smaczne i w ogóle.</h1>
               <p class="slide__author">- Ernest Bimbrownik</p>
             </div>
             <div class="slide">
-              <h1 class="slide__text">
-                Można wypchać tym lisa - polecam. kcnweoc eckdnciow coijwocnow
-                co oweioch oijo2ijc oiwjc n2 cn2o icoi
-              </h1>
+              <h1 class="slide__text">Można wypchać tym lisa - polecam.</h1>
               <p class="slide_author">- Kubus Uszatek z żoną</p>
             </div>
           </div>
